--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400&family=Roboto:wght@300;400;500&family=Updock&family=Yanone+Kaffeesatz&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #efe6d5;
+}
+
+button {
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1.2rem;
+}
+
+button:hover{
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+  transform: scale(1.05);
+  
 }
 
 code {
